--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -504,3 +504,4 @@ CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
