--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -505,3 +505,4 @@ CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
