--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -504,5 +504,10 @@ CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_HW is not set
+
+#
+# Custom Modifications
+#
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_CPU_VOLTAGE_TABLE=y
