Add lower UV values and CONFIG_CPU_OVERCLOCK in crKernel_mako_defconfig
Author: Faux123
Thanks to him!

Change-Id: I2cd196e115b2fc8c7257589b6a46d6d7e8458c66

--- a/arch/arm/configs/crKernel_mako_defconfig
+++ b/arch/arm/configs/crKernel_mako_defconfig
@@ -513,3 +513,4 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_SOUND_CONTROL_HAX_GPL=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_CPU_OVERCLOCK=y
