--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -521,3 +521,4 @@ CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_IP_NF_SECURITY=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
